// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`doesnt render when data is missing 1`] = `
<div
  className="text-gray-500 text-lg font-semibold"
>
  Unknown
</div>
`;

exports[`renders correctly 1`] = `
<div
  className="text-green-500 text-lg font-semibold"
>
  Low Risk
</div>
`;

exports[`renders correctly with integer data 1`] = `
<div
  className="text-green-500 text-lg font-semibold"
>
  Low Risk
</div>
`;
